--- a/animals.html
+++ b/animals.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="style.css" />
-        <title></title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Amnimals Page</title>
     </head>
     <body>
         <!-- Header Section -->
         <div id="header">
-            <img src="images/the_den_zoo.png" />
+            <img src="images/the_den_zoo.png" alt="The Den Zoo logo"/>
         </div>
         <div id="tabs-top">
             <a href="index.html">HOME</a>
@@ -18,80 +19,80 @@
         <div id="main">
             <div id="content">
                 <a class="info-box" href="buffalo.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/buffalo.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt="double_arrow.jpeg"/>
+                    <img src="images/buffalo.jpeg" alt="buffalo.jpeg"/>
                     <h3>BUFFALOS</h3>
                     <p>Strong, steady and untamed by nature</p>
                 </a>
                 <a class="info-box" href="lion.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/lion.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/lion.jpeg" alt=""/>
                     <h3>LIONS</h3>
                     <p>King of the wild, fearless and proud</p>
                 </a>
                 <a class="info-box" href="elephants.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/elephants.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt="double_arrow.jpeg"/>
+                    <img src="images/elephants.jpeg" alt=""/>
                     <h3>ELEPHANTS</h3>
                     <p>Majestic giants with gentle souls</p>
                 </a>
                 <a class="info-box" href="hippo.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/hippopotamus.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/hippopotamus.jpeg" alt=""/>
                     <h3>HIPPOPOTAMUS</h3>
                     <p>Mighty and calm - rulers of the river</p>
                 </a>
                 <a class="info-box" href="zebra.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/zebra.jpg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/zebra.jpg" alt=""/>
                     <h3>ZEBRAS</h3>
                     <p>Wild beauty in black and white</p>
                 </a>
                 <a class="info-box" href="python.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/python.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/python.jpeg" alt=""/>
                     <h3>PYTHONS</h3>
                     <p>Silent strength, coiled in patience</p>
                 </a>
                 <a class="info-box" href="jaguar.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/jaguar.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/jaguar.jpeg" alt=""/>
                     <h3>JAGUARS</h3>
                     <p>Stealth in the shadows, power in every step</p>
                 </a>
                 <a class="info-box" href="heyna.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/hyenas.jpeg"/>
-                    <h3>HEYNAS</h3>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/hyenas.jpeg" alt=""/>
+                    <h3>HYENAS</h3>
                     <p>Clever scavengers with a haunting laugh</p>
                 </a>
                 <a class="info-box" href="giraffe.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/giraffe.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/giraffe.jpeg" alt=""/>
                     <h3>GIRAFFES</h3>
                     <p>Graceful heights with a gentle gaze</p>
                 </a>
                 <a class="info-box" href="blackmamba.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/black_mamba.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/black_mamba.jpeg" alt=""/>
                     <h3>BLACK MAMBAS</h3>
                     <p>Silent, swift, and deadly precise</p>
                 </a>
                 <a class="info-box" href="impala.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/impala.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/impala.jpeg" alt=""/>
                     <h3>IMPALAS</h3>
                     <p>Graceful African antelope known for speed</p>
                 </a>
                 <a class="info-box" href="ostrich.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/Ostrich.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/Ostrich.jpeg" alt=""/>
                     <h3>OSTRICHES</h3>
                     <p>Largest flightless birds, fast-running</p>
                 </a>
                 <a class="info-box" href="rhino.html">
-                    <img class="right" src="images/double_arrow.jpeg"/>
-                    <img src="images/rhinoceros.jpeg"/>
+                    <img class="right" src="images/double_arrow.jpeg" alt=""/>
+                    <img src="images/rhinoceros.jpeg" alt=""/>
                     <h3>RHINOCEROS</h3>
                     <p>Armored strength with a calm spirit</p>
                 </a>
