--- a/blackmamba.html
+++ b/blackmamba.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="style.css" />
-        <title></title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Black Mamba</title>
     </head>
     <body>
         <!-- Header Section -->
         <div id="header">
-            <img src="images/the_den_zoo.png" />
+            <img src="images/the_den_zoo.png" alt=""/>
         </div>
         <div id="tabs-top">
             <a href="index.html">HOME</a>
@@ -18,7 +19,7 @@
         <div id="main">
             <div id="content">
                 <div id="full-info-box">
-                    <img src="images/black_mamba.jpeg"/>
+                    <img src="images/black_mamba.jpeg" alt=""/>
                     <h3>BLACK MAMBAS</h3>
                     <p>The black mamba is one of the fastest and most feared snakes in the world. Despite its name, it’s not black—its skin is olive-gray, but the
 inside of its mouth is deep black. Black mambas are incredibly agile and can slither at speeds up to 20 km/h. They live in savannas and rocky areas across sub-Saharan
