--- a/animals.html
+++ b/animals.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Amnimals Page</title>
+        <title>Animals Page</title>
     </head>
     <body>
         <!-- Header Section -->
