--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title></title>
+        <title>M</title>
     </head>
     <body>
         <!-- Header Section -->
@@ -13,7 +13,7 @@
             <a href="index.html">HOME</a>
             <a href="animals.html">ANIMALS</a>
             <a href="events.html">EVENTS</a>
-            <a herf="map.html">MAP</a>
+            <a href="map.html">MAP</a>
         </div>
         <div id="home">
             <img src="images/map_2.png"/>
