--- a/giraffe.html
+++ b/giraffe.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title></title>
+        <title>GIRAFFES</title>
     </head>
     <body>
         <!-- Header Section -->
