--- a/jaguar.html
+++ b/jaguar.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title></title>
+        <title>J</title>
     </head>
     <body>
         <!-- Header Section -->
