added workshop href

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="images/cover_photo.jpg"/>
         </div>
         <div id="tabs-bottom">
-            <a href="#">WORKSHOPS</a>
+            <a href="workshop.html">WORKSHOPS</a>
             <a href="#">VISIT US</a>
             <a href="#">CONTACT</a>
         </div>
