added visit & contact hrefs

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <div id="tabs-bottom">
             <a href="workshop.html">WORKSHOPS</a>
-            <a href="#">VISIT US</a>
-            <a href="#">CONTACT</a>
+            <a href="visit.html">VISIT US</a>
+            <a href="contact.html">CONTACT</a>
         </div>
     </body>
 </html>
